# provisa

./: .bandit-baseline.json  .claudeignore  .coverage.default  .coverage.default.kenneths-mbp_lan.pid92755.X7VVGoUx.HgKoDYT31Sph  .coverage.default.kenneths-mbp_lan.pid95551.XcY49NDx.HwEwGITGjjVh  .coverage.kafka  .dockerignore  .git-blame-ignore-revs  .gitguardian.yaml  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  NOTICE  README.md  ai.txt  backup-t9-to-dev.sh  coverage.xml  docker-compose.airgap.yml  docker-compose.app.yml  docker-compose.core.yml  docker-compose.demo.yml  docker-compose.dev-install.yml  docker-compose.dev.yml  docker-compose.duckdb.yml  docker-compose.e2e.yml  docker-compose.mvmvp.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  implementation-plan.md  index.html  (+19 more)
.aperio/: debug-model-fec.json
.claude/: settings.local.json
.claude/agents/: agent-writer.md  architect.md  bug-fixer.md  code-reviewer.md  debugger.md  doc-writer.md  marketer.md  refactorer.md  sql-analyst.md  test-strategist.md
.claude/refs/: swarm-mode.md
.codex/: config.toml
.codex/agents/: agent-writer.toml  architect.toml  bug-fixer.toml  code-reviewer.toml  debugger.toml  doc-writer.toml  marketer.toml  refactorer.toml  requirements-tracker.toml  sql-analyst.toml  test-strategist.toml
.githooks/: post-commit
.github/workflows/: build-dmg.yml  build-duckdb-extensions.yml  build-pg-extensions.yml  build-pgwire-bundles.yml  cve-audit.yml  docs.yml  release-exports.yml  requirements-ci.yml  windows-container-smoke.yml
.wrangler/cache/: wrangler-account.json
admin/: index.html
agents/: architect.md  bug-fixer.md  code-reviewer.md  debugger.md  doc-reviewer.md  doc-writer.md  requirements-tracker.md  sql-analyst.md  test-strategist.md
api-reference/: index.html
arch/: requirements.yaml
arch/change-signal-unification/: index.html
arch/dataset-handling-standards/: index.html
arch/deployment/: index.html
arch/fdw_catalog/: index.html
arch/graph/: index.html
arch/jdbc-client-side-encryption/: index.html
arch/requirements/: index.html
arch/vectors/: index.html
architecture/: index.html
competitive_analysis/: index.html
config/: capabilities.yaml  custom_connectors.yaml  pg_extension_catalog.yaml  pgwire.crt  pgwire.key  provisa-install-base.yaml  provisa-install-base.yaml.bak  provisa-install.yaml  provisa-install.yaml.bak  provisa.yaml
config/pgbouncer/: entrypoint.sh  pgbouncer.ini  userlist.txt
configuration/: index.html
cypher/: index.html
dataset-handling-standards/: index.html
db/: init.sql  mongo-init.js  mvmvp-init.sql
db/hive-s3-conf/: hive-site.xml
demo/: __init__.py  py_functions.py  run-demo-servers.sh
demo/files/: create_demo_files.py  customers.csv  inquiries.sqlite  orders.sqlite  pet_store.sqlite  products.parquet
demo/graphql_server/: Dockerfile  requirements.txt  server.py
demo/grpc_server/: server.py
demo/petstore_server/: Dockerfile  server.py
deployment/: index.html
docs/: admin.md  api-reference.md  architecture.md  commands.md  competitive_analysis.md  configuration.md  cypher.md  dataset-handling-standards.md  deployment.md  domain-principles.md  gaps.md  import.md  integrations.md  lineage.md  marketing.md  modeling.md  multitenant.md  pgwire.md  provisa-overview.pptx  python-client.md  quickstart.md  releasing.md  remote-schemas.md  security.md  sources.md  subscriptions.md  testing-plan.md  ~$provisa-overview.pptx
domain-principles/: index.html
exports/: traceability_matrix.csv
hooks/: prose-check.py  test-failure-check.py
import/: index.html
integrations/: index.html
jdbc-driver/: cp.txt  dependency-reduced-pom.xml  pom.xml
marketing/: index.html
multitenant/: index.html
observability/: otel-collector-config.dev.yaml  otel-collector-config.yaml  otlp2parquet.toml  prometheus.yml  tempo.yaml
packaging/duckdb-ext/: collect.py  pyproject.toml
packaging/duckdb-ext/provisa_duckdb_ext/: __init__.py
packaging/pg-ext/: collect.py  pyproject.toml
packaging/pg-ext/provisa_pg_ext/: __init__.py
packaging/pgwire-bundles/: fetch.py  pyproject.toml
packaging/pgwire-bundles/provisa_pgwire_bundles/: __init__.py
pgwire/: index.html
provisa/: __init__.py  cli.py  otel_compat.py  schema_clusters.py  ui_server.py
provisa-client/: pyproject.toml  pyrightconfig.json
provisa-client/provisa_client/: __init__.py  adbc.py  client.py  dbapi.py  encryption.py  graphql_decrypt.py  sqlalchemy_dialect.py
provisa-client/tests/: __init__.py  test_adbc.py  test_client.py  test_dbapi.py  test_sqlalchemy.py  test_sqlalchemy_edge_cases.py
provisa-ui/: .gitignore  .mantine-migrate.workflow.js  .nycrc.json  GRAPHQL.md  codegen.ts  coverage.xml  eslint.config.js  graphql.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  renovate.json  schema.graphql  tsconfig.app.json  vite.config.ts  vitest.config.ts
python-client/: index.html
quickstart/: index.html
refs/: prose-quality.md  swarm-mode.md
releasing/: index.html
remote-schemas/: index.html
scripts/: build-wheel.sh  build_mongo_fdw.sh  build_pg_duckdb.sh  canary_stamp.py  coverage_consolidated.sh  coverage_reqs.py  gen_docs_index.py  gen_feature_matrix.py  gen_features.py  gen_pitch_deck.py  gen_requirements_md.py  gen_roadmap.py  gen_step_implementations.py  gen_step_stubs.py  gen_traceability_matrix.py  mkdocs_hooks.py  prove_embedded_fdw.sh  provisa  relocate_pg_duckdb.sh  seed-kafka.py  stage_duckdb_extensions.py  test-all  validate_requirements.py
search/: search_index.json
security/: index.html
site/: README.md  _headers  deploy.sh  index.html  schema.sql  styles.css  wrangler.jsonc
sources/: index.html
subscriptions/: index.html
terraform/: .gitignore  deploy.sh  destroy.sh
testing-plan/: index.html
tests/: __init__.py  _noauth_config.py  conftest.py  helpers.py
zaychik/: Dockerfile  fix-decode-peer-identity.patch
(+2683 files in other folders)
