[project]
name = "provisa"
version = "0.1.0"
description = "Config-driven data virtualization platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pydantic>=2",
    "strawberry-graphql[fastapi]",
    "pyyaml",
    "graphql-core>=3.2",
    "sqlglot",
    "trino",
    "grpcio",
    "grpcio-tools",
    "grpcio-reflection",
    "pyarrow",
    "adbc-driver-flightsql",
    "adbc-driver-manager",
    "httpx",
    "redis[hiredis]",
    "fakeredis",
    "anthropic",
    "aisuite>=0.1",
    "apscheduler>=3.10",
    "inflect",
    "jsonpath-ng",
    "PyJWT[crypto]",
    "bcrypt",
    "motor",
    "elasticsearch>=8,<9",
    "aiokafka",
    "websockets>=11.0",
    "boto3",
    "stripe",
    "cryptography",
    "sqlalchemy>=2",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-instrumentation-elasticsearch",
    "opentelemetry-instrumentation-grpc",
    "buenavista",
    "duckdb",
    "networkx>=3.0",
    "scipy",
    "defusedxml",
    "jpype1",
    "minio",
]

[project.optional-dependencies]
mysql = ["aiomysql"]
sqlserver = ["aioodbc"]
oracle = ["oracledb"]
all-drivers = ["aiomysql", "aioodbc", "oracledb"]
govdata = ["askamerica[engine]"]
firebase = ["firebase-admin"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-bdd",
    "pytest-cov",
    "ruff",
    "black",
    "pyright",
    "pre-commit",
    "bandit",
    "pip-audit",
    "import-linter",
    "syrupy",
    "respx",
    "python-pptx",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["provisa*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/steps"]
addopts = ""
python_files = ["test_*.py", "*_test.py", "steps_*.py"]
asyncio_mode = "auto"
log_level = "DEBUG"
log_cli = false
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "bdd: pytest-bdd scenario tests (generated from tests/features/)",
    "integration: requires Docker Compose stack (PG + Trino)",
    "e2e: full HTTP pipeline tests against running app",
    "slow: long-running tests",
    "requires_neo4j: requires Neo4j service (docker compose up neo4j)",
    "requires_sparql: requires SPARQL endpoint service (docker compose up fuseki)",
    "requires_elasticsearch: requires Elasticsearch service (docker compose up elasticsearch)",
    "requires_kafka: requires Kafka broker (docker compose up kafka)",
    "requires_debezium: requires Debezium Connect service (docker compose up debezium)",
    "requires_mongodb: requires MongoDB service (docker compose up mongodb)",
    "requires_prometheus: requires Prometheus service (docker compose up prometheus)",
    "requires_pgbouncer: requires PgBouncer service (docker compose up pgbouncer)",
    "requires_provisa_server: requires running Provisa server at localhost:8000",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore:ast\\.NameConstant is deprecated:DeprecationWarning:docstring_parser",
    "ignore:ast\\.Num is deprecated:DeprecationWarning:docstring_parser",
    "ignore:ast\\.Str is deprecated:DeprecationWarning:docstring_parser",
    "ignore:`LoggingHandler` in `opentelemetry-sdk` is deprecated:DeprecationWarning:opentelemetry",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore::ResourceWarning:asyncpg",
    "ignore::ResourceWarning:asyncio",
    "ignore::ResourceWarning:httpcore",
    "ignore::ResourceWarning:socketserver",
    "ignore::DeprecationWarning:opentelemetry",
]

[tool.coverage.run]
source = ["provisa"]
omit = ["provisa/proto/*", "provisa/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["provisa"]
exclude = ["provisa/proto", "**/__pycache__", "**/node_modules", "**/.*", ".venv"]
reportMissingImports = "warning"
reportMissingModuleSource = "none"
extraPaths = ["vendor/buenavista"]

[tool.importlinter]
root_package = "provisa"

[[tool.importlinter.contracts]]
name = "compiler must not import executor"
type = "forbidden"
source_modules = ["provisa.compiler"]
forbidden_modules = ["provisa.executor", "provisa.api"]

[[tool.importlinter.contracts]]
name = "cypher must not import compiler"
type = "forbidden"
source_modules = ["provisa.cypher"]
forbidden_modules = ["provisa.compiler", "provisa.executor", "provisa.api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Defaults (E, F, W) plus B006: mutable default arguments (0 existing violations).
extend-select = ["B006"]

[tool.uv.sources]
buenavista = { path = "vendor/buenavista", editable = true }
