[project]
name = "provisa"
version = "0.1.0"
description = "Config-driven data virtualization platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "asyncpg",
    "pydantic>=2",
    "strawberry-graphql[fastapi]",
    "pyyaml",
    "graphql-core>=3.2",
    "sqlglot",
    "trino",
    "grpcio",
    "grpcio-tools",
    "grpcio-reflection",
    "pyarrow",
    "adbc-driver-flightsql",
    "adbc-driver-manager",
    "httpx",
    "redis[hiredis]",
    "fakeredis",
    "anthropic",
    "mcp>=1.2.0",
    "aisuite>=0.1",
    "apscheduler>=3.10",
    "inflect",
    "jsonpath-ng",
    "PyJWT[crypto]",
    "bcrypt",
    "motor",
    "elasticsearch>=8,<9",
    "aiokafka",
    "websockets>=11.0",
    "boto3",
    "cryptography",
    "sqlalchemy>=2",
    "duckdb-engine",
    "clickhouse-connect",
    "clickhouse-driver",
    # chdb (embedded ClickHouse) ships no Windows wheels. The native Windows tier
    # (REQ-979) runs the DuckDB engine, not chdb, so gate it off win32 — the WSL2
    # container tier provides full ClickHouse compute on Windows.
    "chdb; sys_platform != 'win32'",
    "snowflake-connector-python[pandas]",  # REQ-988: Snowflake federation engine (Arrow-native)
    "databricks-sql-connector",  # REQ-987: Databricks federation engine (Arrow-native Cloud Fetch)
    "google-cloud-bigquery",  # BigQuery federation engine
    "google-cloud-bigquery-storage",  # BigQuery Arrow-native reads (Storage Read API)
    "google-cloud-storage",  # GCS staging for BigQuery external-table links
    "protobuf>=6.33.5,<7",  # keep OTel/gRPC compatible while the google-cloud libs are present
    "grpcio-status<1.82",  # aligns with the pinned protobuf<7
    "pyodbc",  # Azure Synapse / Microsoft Fabric federation engine (T-SQL over TDS/ODBC)
    "azure-identity",  # Azure AD token auth for Fabric/Synapse (uses `az login` / managed identity)
    "psycopg2-binary",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-asyncpg",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-pymongo",
    "opentelemetry-instrumentation-elasticsearch",
    "opentelemetry-instrumentation-grpc",
    "buenavista",
    "duckdb",
    "networkx>=3.0",
    "scipy",
    "defusedxml",
    "jpype1",
    "minio",
    "pyiceberg",
    "neo4j",
    # Native/desktop tier (REQ-979) control plane is SQLite via sqlite+aiosqlite, and SQLAlchemy's
    # async runtime needs greenlet. Both are RUNTIME requirements — the packaged native runtime
    # (built with a plain `pip install .`) failed at startup with ModuleNotFoundError: aiosqlite when
    # these lived only in the `dev` extra.
    "aiosqlite",
    "greenlet",
]

[project.optional-dependencies]
# Embedded PostgreSQL for the desktop/native tier (control plane + dedicated
# telemetry store). Optional because pgserver has no cp313 wheel yet — install
# under a cpython<=3.12 interpreter.
telemetry-pg = ["pgserver"]
mysql = ["aiomysql"]
sqlserver = ["aioodbc"]
oracle = ["oracledb"]
all-drivers = ["aiomysql", "aioodbc", "oracledb"]
govdata = ["askamerica[engine]"]
firebase = ["firebase-admin"]
# Encryption master-key providers (REQ-690-694). boto3 (AWS KMS) is a base dependency,
# so aws_kms needs no extra. These optional SDKs auto-enable their provider in the
# registry (provisa/encryption/registry.py) once installed.
vault = ["hvac"]                      # HashiCorp Vault Transit
azure = ["azure-keyvault-keys"]       # Azure Key Vault (azure-identity is a base dep)
gcp = ["google-cloud-kms"]            # Google Cloud KMS
kms-all = ["hvac", "azure-keyvault-keys", "google-cloud-kms"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-bdd",
    "pytest-cov",
    "ruff",
    "black",
    "pyright",
    "pre-commit",
    "bandit",
    "pip-audit",
    "import-linter",
    "syrupy",
    "respx",
    "python-pptx",
    # Test-time deps that were present-but-undeclared in the old venv (recreating
    # the venv dropped them): async sqlite dialect, sqlalchemy async runtime, and
    # pandas for provisa_client.query_df. Declared so `uv sync` keeps them.
    "aiosqlite",
    "greenlet",
    "pandas",
    # Direct-driver libraries the unit suite exercises (test_drivers/routing/transpiler).
    # Declared so `uv sync` installs them and the driver tests run instead of skipping.
    "aiomysql",
    "oracledb",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["provisa*"]

# Non-.py runtime data must ship in the wheel. setuptools bundles only .py by default,
# so the packaged native runtime lacked provisa/core/schema.sql — init_schema was skipped
# (schema_sql_path.exists() == False) and the control plane started with no `sources` table.
# These files are read at runtime via Path(__file__): the two schema.sql bootstraps and the
# gRPC approval.proto.
[tool.setuptools.package-data]
"*" = ["*.sql", "*.proto"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/steps"]
# Default lane = integration + unit + bdd against the shared dev stack.
# The e2e tier is a SEPARATE process lane (pytest -m e2e): it provisions its own
# isolated Docker stack on ephemeral ports and, being in-process, must override
# PG_PORT/TRINO_PORT/etc. in os.environ — which would redirect the dev-stack
# integration tests to the wrong stack if co-run in one process. packaging and
# cluster are likewise their own lanes (manual/live-minikube). scripts/test-all
# runs every lane and combines coverage. These are documented process-isolation
# lanes, not silent skips.
addopts = "-m 'not packaging and not cluster and not isolated' --ignore=tests/e2e"
python_files = ["test_*.py", "*_test.py", "steps_*.py"]
asyncio_mode = "auto"
log_level = "DEBUG"
log_cli = false
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "bdd: pytest-bdd scenario tests (generated from tests/features/)",
    "integration: requires Docker Compose stack (PG + Trino)",
    "e2e: full HTTP pipeline tests against running app",
    "slow: long-running tests",
    "requires_neo4j: requires Neo4j service (docker compose up neo4j)",
    "requires_sparql: requires SPARQL endpoint service (docker compose up fuseki)",
    "requires_elasticsearch: requires Elasticsearch service (docker compose up elasticsearch)",
    "requires_kafka: requires Kafka broker (docker compose up kafka)",
    "requires_debezium: requires Debezium Connect service (docker compose up debezium)",
    "requires_mongodb: requires MongoDB service (docker compose up mongodb)",
    "requires_mariadb: requires MariaDB service (docker compose up mariadb)",
    "requires_tidb: requires TiDB service (docker compose up tidb)",
    "requires_cockroachdb: requires CockroachDB service (docker compose up cockroachdb)",
    "requires_yugabytedb: requires YugabyteDB service (docker compose up yugabytedb)",
    "requires_sqlserver: requires SQL Server service (docker compose up sqlserver)",
    "requires_oracle: requires Oracle service (docker compose up oracle)",
    "requires_singlestore: requires SingleStore service (docker compose up singlestore); needs SINGLESTORE_LICENSE",
    "requires_cassandra: requires Cassandra service (docker compose up cassandra)",
    "requires_firebird: requires Firebird service (docker compose up firebird)",
    "requires_exasol: requires Exasol service (docker compose up exasol); amd64-only image",
    "requires_redshift: requires a live AWS Redshift cluster (REDSHIFT_* env); no self-provision",
    "requires_sharepoint: requires a live SharePoint site (SHAREPOINT_* env); no self-provision",
    "requires_splunk: requires Splunk service (docker compose up splunk)",
    "requires_prometheus: requires Prometheus service (docker compose up prometheus)",
    "requires_pgbouncer: requires PgBouncer service (docker compose up pgbouncer)",
    "requires_provisa_server: requires running Provisa server at localhost:8000",
    "packaging: installer/packaging flow; validated manually + by unit tests, deselected by default",
    "cluster: helm/minikube deployment test; own run lane (pytest -m cluster) against a live minikube, deselected by default",
    "isolated: needs its own pytest process (shared module-singleton state or a non-restartable JVM); own lane in scripts/test-all, deselected by default",
]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio",
    "ignore:ast\\.NameConstant is deprecated:DeprecationWarning:docstring_parser",
    "ignore:ast\\.Num is deprecated:DeprecationWarning:docstring_parser",
    "ignore:ast\\.Str is deprecated:DeprecationWarning:docstring_parser",
    "ignore:`LoggingHandler` in `opentelemetry-sdk` is deprecated:DeprecationWarning:opentelemetry",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore::ResourceWarning:asyncpg",
    "ignore::ResourceWarning:asyncio",
    "ignore::ResourceWarning:httpcore",
    "ignore::ResourceWarning:socketserver",
    "ignore::DeprecationWarning:opentelemetry",
]

[tool.coverage.run]
source = ["provisa"]
omit = ["provisa/proto/*", "provisa/migrations/*", "provisa/tools/*"]
# scripts/test-all runs the default lane and the e2e lane as separate processes
# and `coverage combine`s them; parallel=true tags each run's data file so they
# don't clobber each other.
parallel = true
# Server subprocesses (IsolatedServer / provisa_server) measure their own coverage
# via COVERAGE_PROCESS_START + the .pth trigger; they are shut down with SIGTERM, so
# a SIGTERM handler must flush their data or it is lost (out-of-process Bolt/Flight/
# gRPC/pgwire/governed-pipeline coverage). sigterm=true installs that handler.
sigterm = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
# Type-checking targets the product package only. Test modules are pytest
# fixtures/hooks/step-defs whose symbols pytest injects by name at runtime, so
# static "unused function/parameter/variable" analysis produces only false
# positives there — exclude tests from analysis rather than sprinkle pragmas.
include = ["provisa"]
exclude = ["provisa/proto", "**/__pycache__", "**/node_modules", "**/.*", ".venv", "tests", "**/tests"]
reportMissingImports = "warning"
reportMissingModuleSource = "none"
extraPaths = ["vendor/buenavista"]

[tool.importlinter]
root_package = "provisa"

[[tool.importlinter.contracts]]
name = "compiler must not import executor"
type = "forbidden"
source_modules = ["provisa.compiler"]
forbidden_modules = ["provisa.executor", "provisa.api"]

[[tool.importlinter.contracts]]
name = "cypher must not import compiler"
type = "forbidden"
source_modules = ["provisa.cypher"]
forbidden_modules = ["provisa.compiler", "provisa.executor", "provisa.api"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Defaults (E, F, W) plus B006: mutable default arguments (0 existing violations).
extend-select = ["B006"]

[tool.uv.sources]
buenavista = { path = "vendor/buenavista", editable = true }
