[project]
name = "provisa-client"
version = "0.1.0"
description = "Python client for Provisa — GraphQL queries and Arrow Flight streaming"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=15",
]

[project.optional-dependencies]
pandas = ["pandas>=2"]
sqlalchemy = ["sqlalchemy>=2"]
adbc = ["adbc-driver-manager>=0.10"]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "pandas>=2",
    "sqlalchemy>=2",
]

[project.entry-points."sqlalchemy.dialects"]
"provisa.http" = "provisa_client.sqlalchemy_dialect:ProvisaDialect"
"provisa.https" = "provisa_client.sqlalchemy_dialect:ProvisaDialect"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["provisa_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
